# ObjectManager

./: ChangeLog  Contrib  Makefile.in  README  TODO  active.c  build_static  config.h  config.status  configure  configure.in  createmenu.c  createmenusig.c  global.c  loginwin.c  miscfunc.c  mkinstalldirs  msgbox.c  nosqlcpr.txt  objectfunc.c  objectmanager.spec  objectmansig.c  objectmansrc.c  objectmenu.c  objectmenusig.c  oracle.c  oracle_oci.c  oracle_oci.h  orasoft.c  pixmap_handler.c  preferences_win.c  prefs.c  prefs.h  printwin.c  progwin.c  sanity_check  storagewin.c  tns_win.c  toolbarsig.c  treecontrol.c  (+2 more)
common-files/: codecreate.c  common.h  confirmwin.c  dirbrowser.c  errors.c  export_csv.c  export_html.c  export_sql.c  export_tab.c  filewin.c  grant_privilege.c  oracle.h  pixbutton.c  search.c  vmsgfmt.c
common-files/CVS/: Entries
dynamic_export/: build  export_postscript.c  ps_header.h
dynamic_export/CVS/: Entries  Repository
glade/: createdblink.glade  createtablespace.glade  createview.glade  datafilealter.glade  datafilecreate.glade  datafileview.glade  indexer.glade  objectmenus.glade  tablewitch.glade  witchfw.glade
glade/CVS/: Entries  Repository
include/: addcolumn.h  config.h  global.h  loginwinsig.h  miscfunc.h  objectfunc.h  objectman.h  objectmansig.h  objectmansrc.h  printwin.h  toolbarsig.h  treecontrol.h  windowstructs.h  witchfwsig.h  witchfwsrc.h
include/CVS/: Entries  Repository
objects/CVS/: Repository
objects/datafiles/: datafilecreate.c  datafilefuncs.h  datafileinfo.c  datafilemenu.c  datafilemenusig.c  datafileview.c
objects/dblinks/: dblinkcreate.c  dblinkfuncs.h  dblinkinfo.c  dblinkmenu.c  dblinkmenusig.c  dblinktoolbar.c  dblinktoolbarsig.c  dblinkview.c
objects/functions/: functionfuncs.h  functioninfo.c
objects/indexes/: indexer.c  indexfuncs.h  indexinfo.c  indexmenu.c  indexmenusig.c  indextoolbar.c  indextoolbarsig.c  indexview.c
objects/logfiles/: logfilecreate.c  logfilefuncs.h  logfileinfo.c  logfiletoolbar.c  logfiletoolbarsig.c  logfileview.c
objects/procedures/: procfuncs.h  procinfo.c  procmenu.c  procmenusig.c  proctoolbar.c  proctoolbarsig.c  procview.c
objects/rollbacks/: rollbackcreate.c  rollbackfuncs.h  rollbackinfo.c  rollbackmenu.c  rollbackmenusig.c  rollbackview.c
objects/security/: securitycreate.c  securityfuncs.h  securityinfo.c  securitymenu.c  securitymenusig.c  securitytoolbar.c  securitytoolbarsig.c
objects/sequences/: sequencecreate.c  sequencefuncs.h  sequenceinfo.c  sequencemenu.c  sequencemenusig.c  sequencetoolbar.c  sequencetoolbarsig.c  sequenceview.c
objects/sessions/: sessionfuncs.h  sessioninfo.c  sessionmenu.c  sessionmenusig.c  sessiontoolbar.c  sessiontoolbarsig.c  sessionview.c
xpm/: activesesicon.xpm  addcolumn.xpm  analyze.xpm  anim1.xpm  anim10.xpm  anim11.xpm  anim12.xpm  anim2.xpm  anim3.xpm  anim4.xpm  anim5.xpm  anim6.xpm  anim7.xpm  anim8.xpm  anim9.xpm  blank.xpm  cache.xpm  closedpackageicon.xpm  coalesce.xpm  core-add.xpm  core-back.xpm  core-cancel.xpm  core-remove.xpm  core-storage.xpm  deallocate.xpm  disconnect.xpm  drop.xpm  error.xpm  foldericon.xpm  highlight_error.xpm  inactivesesicon.xpm  index.xpm  indexicon.xpm  kill.xpm  login.xpm  objecticon.xpm  ofoldericon.xpm  om_error.xpm  om_kill.xpm  open.xpm  (+26 more)
(+76 files in other folders)
